fix overflow

--- a/public/learnWords/css/learnWordsStyles.css
+++ b/public/learnWords/css/learnWordsStyles.css
@@ -137,8 +137,8 @@ form label, form input {
   background-size: contain;
   min-width: 0px;
   min-height: 0px;
-	width: 20px;
-  height: 20px;
+	width: 25px;
+  height: 25px;
 	border				: 0;
 }
 
